--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- fonts & icon ------------- -->
 
     <title>
@@ -21,15 +27,17 @@
     </title>
 
     <!-- favicon ---------------------- -->
-    <link rel="shortcut icon" href="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/32x32_256x256.png_32x32_2d0995d9-ec86-4c14-b928-71101777194c_96x96.png?v=1647426716" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/32x32_256x256.png_32x32_2d0995d9-ec86-4c14-b928-71101777194c_96x96.png?v=1647426716"
+      type="image/x-icon"
+    />
 
     <!-- favicon------------------- -->
-
 
     <!-- stylesheets ----------------- -->
     <link rel="stylesheet" href="index.css" />
     <!-- stylesheets------------------------ -->
-
   </head>
   <body>
     <div id="carousel">
@@ -40,16 +48,14 @@
       <button id="next">
         <span>></span>
       </button>
-      <div id="dots">
-
-      </div>
+      <div id="dots"></div>
     </div>
 
     <section>
-        <div class="container" id="best_seller">
-            <h3>Best Sellers</h3>
-            <div class="cards">
-                <!-- <div class="card">
+      <div class="container" id="best_seller">
+        <h3>Best Sellers</h3>
+        <div class="cards">
+          <!-- <div class="card">
                     <span class="saving">YOU SAVE 50%</span>
                     <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/products/main1_15634ca0-9f81-4d11-b891-9a1496f709b1_600x.png?v=1641801688">
                     <div>
@@ -63,45 +69,45 @@
                         
                     </div>
                 </div> -->
-            </div>
         </div>
+      </div>
 
-        <div class="container" id="smart_watch">
-            <h3>Smart Watches</h3>
-            <div class="cards">
-                <!-- done from js -->
-            </div>
+      <div class="container" id="smart_watch">
+        <h3>Smart Watches</h3>
+        <div class="cards">
+          <!-- done from js -->
         </div>
+      </div>
     </section>
 
     <section>
-        <div class="container" id="trending_wireless">
-            <h3>Trending Wireless</h3>
-            <div class="cards">
-                <!-- done from js -->
-            </div>
+      <div class="container" id="trending_wireless">
+        <h3>Trending Wireless</h3>
+        <div class="cards">
+          <!-- done from js -->
         </div>
+      </div>
 
-        <div class="container" id="trending_wired">
-            <h3>Trending Wired</h3>
-            <div class="cards">
-                <!-- done from js -->
-            </div>
+      <div class="container" id="trending_wired">
+        <h3>Trending Wired</h3>
+        <div class="cards">
+          <!-- done from js -->
         </div>
+      </div>
 
-        <div class="container" id="trending_headphone">
-            <h3>Trending Headphones</h3>
-            <div class="cards">
-                <!-- done from js -->
-            </div>
+      <div class="container" id="trending_headphone">
+        <h3>Trending Headphones</h3>
+        <div class="cards">
+          <!-- done from js -->
         </div>
+      </div>
 
-        <div class="container" id="gaming">
-            <h3>Gaming</h3>
-            <div class="cards">
-                <!-- done from js -->
-            </div>
+      <div class="container" id="gaming">
+        <h3>Gaming</h3>
+        <div class="cards">
+          <!-- done from js -->
         </div>
+      </div>
     </section>
   </body>
 </html>
