--- a/signup.html
+++ b/signup.html
@@ -93,7 +93,7 @@ a{
  
      <div><input id="password" type="password"  placeholder="Password"/></div>
     <input  type ="submit"  id="create" value="CREATE ACCOUNT" >
-    <div><a href ="" id="loginlin">Already have an account ?</a>  <a href ="signIn.html" id="storelink">Login</a>
+    <div><a href ="" id="loginlin">Already have an account ?</a>  <a href ="signin.html" id="storelink">Login</a>
     
     </div></form>
 </div>
