cart function completed

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           Free Shipping sitewide | <b>Cash On Delivery</b> available for order value
           upto <b>₹3000</b> 
         </p>
+
       </div>
       <div id="cart_pdt">
         <!-- <div class="empty">
@@ -66,6 +67,19 @@
           <button class="empty_btn" onclick="shopping">Start Shopping</button>
         </div> -->
         
+      </div>
+
+      <div id="total_cart">
+        <div>
+          <p>Shipping :</p>
+          <p>FREE</p>
+        </div>
+        <div>
+          <p>Total :</p>
+          <p>Rs. <span id="total_price">0</span></p>
+        </div>
+        <button>Continue Shopping ></button>
+        <button>Continue to Payment</button>
       </div>
     </div>
 
