--- a/signup.html
+++ b/signup.html
@@ -56,6 +56,11 @@
         #login{
             color:gray;
         }
+        input{
+            margin-bottom: 10px;
+            border-radius: 7px;
+            
+        }
         
 
 
