--- a/item_page.html
+++ b/item_page.html
@@ -79,8 +79,8 @@
         flex-direction: column;
         margin-left: 40px;
         margin-right: 40px;
-        /* border: 1px solid black; */
-        height: 500px;
+        border: 1px solid black;
+        /* height: 500px; */
         width: 55%;
       }
 
@@ -115,10 +115,10 @@
 
       #rightbottom {
         display: flex;
-        /* border: 1px solid blue; */
+        border: 1px solid blue;
         justify-content: space-around;
         /* align-items: center; */
-        margin-top: -30px;
+        /* margin-top: -30px; */
       }
       /* pricebox section css */
 
@@ -258,7 +258,7 @@
       }
       #colourbox {
         display: grid;
-        grid-template-columns: repeat(4, 80px);
+        grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(auto, 80px);
         gap: 10px;
         /* border: 1px solid red; */
