--- a/navbar.html
+++ b/navbar.html
@@ -344,7 +344,7 @@
                     <a href="products.html"><img id="LimitedEdition"
                             src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-limited-edition_540x.png?v=1612338560"></a>
 
-                    <a href="products.html"><img id="Misfit-BestTrimmerforMen"
+                    <a href="products.html"><img id="MisfitBestTrimmerforMen"
                             src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/MISFIT-shop_720x.png?v=1624859990"></a>
                     <a href="products.html"><img id="ImmortalGaming"
                             src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Immortal_category_Image_720x.png?v=1626094103"></a>
