--- a/products.html
+++ b/products.html
@@ -136,6 +136,14 @@
       #productsGrid > div > div > :nth-child(2) {
         margin-top: -10px;
       }
+      #sorting{
+        width: 10%;
+        font-size: medium;
+
+      }
+      #sorting>option{
+        padding: 20px;
+      }
       button {
         background-color: rgb(255, 0, 0);
         border-radius: 5px;
