--- a/index.html
+++ b/index.html
@@ -31,17 +31,102 @@
       rel="shortcut icon"
       href="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/32x32_256x256.png_32x32_2d0995d9-ec86-4c14-b928-71101777194c_96x96.png?v=1647426716"
       type="image/x-icon"
+      
     />
+    
 
     <!-- favicon------------------- -->
 
     <!-- stylesheets ----------------- -->
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="navbar.css">
     <!-- stylesheets------------------------ -->
   </head>
   <body>
     <!-------------------------------------------- navbar area---------------------------------- -->
+
+    <div id="navbar">
+      <div>
+          <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229"
+              alt="error">
+      </div>
+
+      <div>
+          <!-- <h3 id="mouseover">Shop</h3> -->
+          <div class="dropdown">
+              <button class="dropbtn">Shop</button>
+              <div class="dropdown-content">
+                <a href="products.html"><img id="wirelessEarbuds"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-TWS_540x.png?v=1612338251"></a>
+
+                <a href="products.html"><img id="wirelessHeadphones"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Rectangle271_540x.png?v=1612338387"></a>
+                <a href="products.html"><img id="SmartWatches"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/pro_gear_720x.jpg?v=1648546494"></a>
+
+                <a href="products.html"><img id="WiredEarphones"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/latest_background_b4f773ca-05d9-41cc-a7cf-3104993ae895_540x.png?v=1612338356"></a>
+                <a href="products.html"><img id="WirelessSpeakers"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/box-5_540x.png?v=1612338436"></a>
+                <a href="products.html"><img  id="HomeTheatreSystems&Soundbars" 
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Collections_5baef8f1-a67a-40a5-a537-4258c6caae6a_540x.png?v=1622452897"></a>
+
+                <a href="products.html"><img id="MobileAccessories"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/bence-boros-253214-unsplash_720x.jpg?v=1648545875"></a>
+                <a href="products.html"><img id="TRebel"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/New-Category-Banners_with-Trebal_09_720x.png?v=1615033153"></a>
+                <a href="products.html"><img id="LimitedEdition"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-limited-edition_540x.png?v=1612338560"></a>
+
+                <a href="products.html"><img id="MisfitBestTrimmerforMen"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/MISFIT-shop_720x.png?v=1624859990"></a>
+                <a href="products.html"><img id="ImmortalGaming"
+                        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Immortal_category_Image_720x.png?v=1626094103"></a>
+            </div>
+          </div>
+
+
+          <h4>Offer Zone</h4>
+
+          <div class="more">
+              <button class="morebtn">More ↓</button>
+              <div class="more-content">
+                  <a href="#">Daily Deals </a>
+                  <a href="#">Gifting</a>
+                  <a href="#">Do What Floats Yours BoAt</a>
+
+                  <a href="#">Meet The boAtheads</a>
+                  <a href="#">Corporate Orders</a>
+                  <a href="#">Earns rs.100</a>
+
+                  <a href="#">Careers</a>
+
+              </div>
+          </div>
+
+      </div>
+
+      <div>
+          <div id="searchImg">
+              <img src="https://t3.ftcdn.net/jpg/04/96/24/10/240_F_496241057_SduwgOUjIi2s3nQBXe6vcKFZ0OjsPXFz.jpg"
+                  alt="error">
+              <input type="text" id="search" placeholder="Search....">
+          </div>
+
+          <img onclick="showLogin()"
+              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/navigation-Icon4.png?v=1655206048"
+              alt="error">
+
+
+
+          <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/gift.png?v=1606314809" alt="error">
+          <img id="addTocart_souvik" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/navigation-Icon-3.png?v=1655206047"
+              alt="error">
+
+      </div>
+
+  </div>
 
     <!----------------------------------------------- homepage area------------------------------- -->
 
@@ -293,4 +378,6 @@
 <script src="index.js"></script>
 <script src="product.js"></script>
 <script src="cart.js"></script>
+<script src="navbar.js"></script>
+
 <!-- <script src="navbar.js"></script> -->
