price box and colourbox layout updated

--- a/item_page.html
+++ b/item_page.html
@@ -79,7 +79,7 @@
         flex-direction: column;
         margin-left: 40px;
         margin-right: 40px;
-        border: 1px solid black;
+        /* border: 1px solid black; */
         /* height: 500px; */
         width: 55%;
       }
@@ -87,8 +87,8 @@
       /* product title css */
 
       #productTitle {
-        height: 100px;
-        margin-bottom: 20px;
+        height: 80px;
+        margin-bottom: 5px;
         font-size: large;
         /* border: 1px solid black; */
       }
@@ -115,7 +115,7 @@
 
       #rightbottom {
         display: flex;
-        border: 1px solid blue;
+        /* border: 1px solid blue; */
         justify-content: space-around;
         /* align-items: center; */
         /* margin-top: -30px; */
@@ -195,6 +195,8 @@
         border: 1px solid rgb(167, 166, 166);
         border-radius: 10px;
         width: 47%;
+        height: fit-content;
+        margin-top: 1%;
         background-color: rgb(239, 239, 239);
       }
       #qtnRow,
