navbar and cart css small changes

--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
   <div id="carousel">
     <img src="" id="car_img" alt="carousel Image" />
     <button id="prev">
-      <span>
-        << /span>
+      <span><</span>
     </button>
     <button id="next">
       <span>></span>
@@ -221,8 +220,7 @@
     <div class="container new">
       <h3>New Launches</h3>
       <div id="newLaunches">
-        <p id="left">
-          << /p>
+        <p id="left"> < </p>
             <div id="content">
               <!----
 
@@ -256,7 +254,7 @@
 
                 -->
             </div>
-            <p id="right">></p>
+            <p id="right"> > </p>
       </div>
     </div>
   </section>
@@ -296,8 +294,7 @@
   <section>
     <div class="container celeb">
       <div id="newLaunches">
-        <p id="celeb_left">
-          << /p>
+        <p id="celeb_left"> < </p>
             <div id="celeb">
               <!-- done with js -->
             </div>
