some issue fixed

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
   <div id="navbar">
     <div>
+      <a href="index.html">
       <img
         src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229"
         alt="error">
+      </a>
     </div>
 
     <div>
@@ -121,7 +123,7 @@
 
 
       <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/gift.png?v=1606314809" alt="error">
-      <img id="addTocart_souvik"
+      <img id="cartOpen"
         src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/navigation-Icon-3.png?v=1655206047" alt="error">
 
     </div>
@@ -179,7 +181,6 @@
     <button id="next">
       <span>></span>
     </button>
-    <div id="dots"></div>
   </div>
   <!-- carousel ending ------------------------------------- -->
 
