product filter done

--- a/item_page.html
+++ b/item_page.html
@@ -240,8 +240,8 @@
         margin-right: 20px;
         /* display: flex; */
         /* flex-direction: column; */
-        position: relative;
-        top: 0;
+        /* position: relative; */
+        /* top: 0; */
       }
       hr {
         /* width: 350px; */
@@ -261,7 +261,7 @@
       #colourbox {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(auto, 80px);
+        grid-template-rows: auto;
         gap: 10px;
         /* border: 1px solid red; */
         width: 50%;
