products filter applied but navbar dropdowm disoriented,

--- a/navbar.html
+++ b/navbar.html
@@ -396,7 +396,7 @@
 </body>
 
 </html>
-<script>
+<!-- <script>
    
 
     function showLogin() {
@@ -425,12 +425,12 @@
 
     function deleteOption() {
         document.querySelector("#showLogIn").remove();
-    }
+    } -->
 
 
 
 
-</script>
+<!-- </script> -->
 <script src="navbar.js"></script>
 
 
