--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <link rel="stylesheet" href="cart.css">
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="footer.css">
+  <link rel="stylesheet" href="bloghome.css">
+
   <!-- stylesheets------------------------ -->
 </head>
 
@@ -290,6 +292,32 @@
       </div>
     </div>
   </section>
+
+    <!-- blog area -->
+
+    <section id = "blog">
+      <h1>boAt Blogs</h1>
+    <div id = "container">
+        <div>
+            <img class = "image"  src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Earphone_1296x_540x_25759241-1386-4661-bec0-bad7c111178f_540x.png?v=1650620291" alt="Headphone">
+            <h3>Earphones Buying Guide - Everything You Need To Know </h3>
+        </div>
+        <div>
+            <img class = "image" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Main-banner_520x500_540x_d7c9944e-0985-498b-9a89-3a54d32c9dd2_520x.png?v=1650620307" alt="Headphone">
+            <h3>The Ultimate Smartwatch Guide - Get The World on The Wrist</h3>
+        </div>
+        <div>
+            <img class = "image" src="https://cdn.shopify.com/s/files/1/0057/8938/4802/articles/blog_600x.jpg?v=1654260672" alt="Headphone">
+            <h3>It is time to Rock The Streets With BoAt Headphones</h3>
+        </div>
+        
+    </div>
+
+    <a href="bloggrid.html"><button>EXPLORE BLOGS</button></a>
+
+    </section>
+
+
 
   <!-- celebrity review -------------------------  -->
   <section>
