blog added to homepage

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     <!-- blog area -->
 
     <section id = "blog">
-      <h1>boAt Blogs</h1>
+      <div><h1>boAt Blogs</h1></div>
     <div id = "container">
         <div>
             <img class = "image"  src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Earphone_1296x_540x_25759241-1386-4661-bec0-bad7c111178f_540x.png?v=1650620291" alt="Headphone">
@@ -313,7 +313,7 @@
         
     </div>
 
-    <a href="bloggrid.html"><button>EXPLORE BLOGS</button></a>
+    <div><a href="bloggrid.html"><button>EXPLORE BLOGS</button></a></div>
 
     </section>
 
