--- a/bloggrid.html
+++ b/bloggrid.html
@@ -22,7 +22,7 @@
         #blognav {
             width: 80%;
             height: 60px;   
-            display: flex;
+            display: inline-flex;
             justify-content: space-around;
             color: white;
             background-color: #252525 ;
