--- a/Signin.html
+++ b/Signin.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="cart.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="footer.css">
     <title>Document</title>
+
+     <!-- favicon ---------------------- -->
+  <link rel="shortcut icon"
+  href="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/32x32_256x256.png_32x32_2d0995d9-ec86-4c14-b928-71101777194c_96x96.png?v=1647426716"
+  type="image/x-icon" />
+
+
+<!-- favicon------------------- -->
     <style>
 body{
     
@@ -128,93 +133,7 @@ input{
     </style>
 </head>
 <body>
-     <!-------------------------------------------- navbar area---------------------------------- -->
-
-  <div id="navbar">
-    <div>
-      <a href="index.html">
-      <img
-        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x_200x_f9c79bf9-9c9a-477d-ab6a-7c889a1f2f70_170x.png?v=1646731229"
-        alt="error">
-      </a>
-    </div>
-
-    <div>
-      <!-- <h3 id="mouseover">Shop</h3> -->
-      <div class="dropdown">
-        <button class="dropbtn">Shop</button>
-        <div class="dropdown-content">
-          <a href="products.html"><img id="wirelessEarbuds"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-TWS_540x.png?v=1612338251"></a>
-
-          <a href="products.html"><img id="wirelessHeadphones"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Rectangle271_540x.png?v=1612338387"></a>
-          <a href="products.html"><img id="SmartWatches"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/pro_gear_720x.jpg?v=1648546494"></a>
-
-          <a href="products.html"><img id="WiredEarphones"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/latest_background_b4f773ca-05d9-41cc-a7cf-3104993ae895_540x.png?v=1612338356"></a>
-          <a href="products.html"><img id="WirelessSpeakers"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/box-5_540x.png?v=1612338436"></a>
-          <a href="products.html"><img id="HomeTheatreSystemsSoundbars"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Collections_5baef8f1-a67a-40a5-a537-4258c6caae6a_540x.png?v=1622452897"></a>
-
-          <a href="products.html"><img id="MobileAccessories"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/bence-boros-253214-unsplash_720x.jpg?v=1648545875"></a>
-          <a href="products.html"><img id="TRebel"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/New-Category-Banners_with-Trebal_09_720x.png?v=1615033153"></a>
-              
-          <a href="products.html"><img id="LimitedEdition"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/dropdown-limited-edition_540x.png?v=1612338560"></a>
-
-          <a href="products.html"><img id="MisfitBestTrimmerforMen"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/MISFIT-shop_720x.png?v=1624859990"></a>
-
-          <a href="products.html"><img id="ImmortalGaming"
-              src="https://cdn.shopify.com/s/files/1/0057/8938/4802/collections/Immortal_category_Image_720x.png?v=1626094103"></a>
-        </div>
-      </div>
-
-
-      <h4>Offer Zone</h4>
-
-      <div class="more">
-        <button class="morebtn">More ↓</button>
-        <div class="more-content">
-          <a href="#">Daily Deals </a>
-          <a href="#">Gifting</a>
-          <a href="#">Do What Floats Yours BoAt</a>
-
-          <a href="#">Meet The boAtheads</a>
-          <a href="#">Corporate Orders</a>
-          <a href="#">Earns rs.100</a>
-
-          <a href="#">Careers</a>
-
-        </div>
-      </div>
-
-    </div>
-
-    <div>
-      <div id="searchImg">
-        <img src="https://t3.ftcdn.net/jpg/04/96/24/10/240_F_496241057_SduwgOUjIi2s3nQBXe6vcKFZ0OjsPXFz.jpg"
-          alt="error">
-        <input type="text" id="search" placeholder="Search....">
-      </div>
-
-      <img onclick="showLogin()"
-        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/navigation-Icon4.png?v=1655206048" alt="error">
-
-
-
-      <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/gift.png?v=1606314809" alt="error">
-      <img id="cartOpen"
-        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/navigation-Icon-3.png?v=1655206047" alt="error">
-
-    </div>
-
-  </div>
+ 
 
  
 <div class="center">
@@ -246,107 +165,12 @@ input{
 </p>
 </form>
 <div id="new"><a href="" >New Customer?</a>
-<a href="signup.html" id="customer_reg"> Create  account </a>
+<a href="signup1.html" id="customer_reg"> Create  account </a>
 
 
     <p><a href="" >Forgot Password?</a></p>
 </div>   
-<!-- footer section  -->
-<section id="footer">
-  <div id="first">
 
-
-    <div>
-      <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Boat-Logo_200x.png?v=1600753267">
-      <p>Subscribe to email alerts.We promise not to spam your inbox.</p>
-      <form id="border">
-        <input id="Email" type="email" placeholder="Email Address">
-        <button>SUBSCRIBE</button>
-      </form>
-
-      <div id="second">
-        <div>
-          <i class="fa fa-facebook"></i>
-        </div>
-        <div>
-          <i class="fa fa-twitter"></i>
-        </div>
-        <div><i class="fa fa-instagram"></i></div>
-        <div><i class="fa fa-youtube-play"></i></i></div>
-        <div><i class="fa fa-linkedin"></i></div>
-
-      </div>
-
-    </div>
-
-
-
-    <div id="left">
-      <h5>SHOP</h5>
-      <p>True Wireless Earbuds</p>
-      <p>Wireless Headphones</p>
-      <p>Wired Headphones</p>
-      <p>Wireless Speakers</p>
-      <p>Home Audio</p>
-      <p>Mobile Accessories</p>
-      <p>Smart Watches</p>
-      <p>TRebel</p>
-      <p>Misfit</p>
-      <p>Gift Card</p>
-      <p>Rock In India</p>
-      <p>Earn Rs.100</p>
-    </div>
-    <div>
-      <h5>HELP</h5>
-      <p>Track Your Order</p>
-      <p>Warranty & Support</p>
-      <p>Return Policy</p>
-      <p>Service Centers</p>
-      <p>Bulk Orders</p>
-      <p>FAQs</p>
-      <p>Why Buy Direct</p>
-    </div>
-    <div>
-      <h5>COMPANY</h5>
-      <p>About boAt</p>
-      <p>News</p>
-      <p>Read Our Blog</p>
-      <p>Careers</p>
-      <p>Security</p>
-      <p>Terms of Service</p>
-      <p>Privacy Policy</p>
-      <p>Investor Relations</p>
-    </div>
-  </div>
-
-  <div id="card_f">
-    <div>
-      <img
-        src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/Fotter_payment_icn_2_900x_aff68517-98f4-4a82-9aee-2405cea66251_350x.png?v=1650262054">
-    </div>
-
-    <div id="download">
-      <div>
-        <h4>DOWNLOAD THE APP</h4>
-      </div>
-
-
-      <div>
-        <a href="https://play.google.com/store/apps/details?id=boatlifestylein.android.app" target="_blank">
-          <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/google-play.png?v=1608620293">
-        </a>
-      </div>
-      <div>
-        <a href="https://apps.apple.com/us/app/id1521646593" target="_blank">
-          <img src="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/app-store.png?v=1608620293">
-        </a>
-      </div>
-    </div>
-  </div>
-  <div id="rights">
-    <p>© 2022 Imagine Marketing Limited. All Rights Reserved.</p>
-  </div>
-</section>
 </body>
 </html>
 <script>
@@ -380,6 +204,4 @@ if(filter.length>0){
 }
 }
 </script>
-<script src="cart.js"></script>
-<script src="navbar.js"></script>
-<script src="footer.js"></script>
+
