--- a/blogpage.html
+++ b/blogpage.html
@@ -8,6 +8,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
+
+     <!-- favicon ---------------------- -->
+  <link rel="shortcut icon"
+  href="https://cdn.shopify.com/s/files/1/0057/8938/4802/files/32x32_256x256.png_32x32_2d0995d9-ec86-4c14-b928-71101777194c_96x96.png?v=1647426716"
+  type="image/x-icon" />
+
+
+<!-- favicon------------------- -->
+
+
    <style>
 
        body {
