--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         <p>Total :</p>
         <p>Rs. <span id="total_price">0</span></p>
       </div>
-      <button>Continue Shopping ></button>
-      <button>Continue to Payment</button>
+      <button><a href="products.html">Continue Shopping></a></button>
+      <button><a href="payment.html">Continue to Payment</a></button>
     </div>
   </div>
 
